Pascal/test/cohadar/pascal/errors/condition_repeat.pas
program test;
var a : integer;
	
procedure njak;
begin
end;	
	
begin
	repeat 
		a := a - 1 
	until njak(); 
end.